1999-01-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4 (GNOME_LIBGTOP_DOCU): New macro. This
	checks whether you have the LibGTop documentation installed and
	defines `HAVE_LIBGTOP_DOCU' if appropriate. Also provides automake
 	conditional.

1999-01-20  Martin Baulig  <martin@home-of-linux.org>

	* acinclude.m4 (ac_result): Unset CATOBJEXT so
	that the macros and Makefiles correctly handle
	disabling NLS when no gettext is found.

1999-01-19  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-cxx-check.m4 (GNOME_CHECK_CXX): Rewrite to be saner.  
	Don't limit yourself to a fixed set of names for the compiler.

1999-01-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* need-declaration.m4, gnome-support.m4: Fixed the scandir detection.

1999-01-06 Nat Friedman   <nat@nat.org>

	* Makefile.am (MACROS): Added gnome-print-check.m4 to MACROS

1999-01-05  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Include dirent.h before checking whether
	`scandir' needs to be declared.
	* need-declaration.m4: Revert unlogged change.

1998-12-22  Jeff Garzik  <jgarzik@pobox.com>

	* gnome.m4:  Added and exported GNOME_APPLET_LIBS.

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gnome-support.m4: Removed all the stuff for argp, that was
	causing gnomesupport not to build.

1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-gettext.m4: Add the hacked version of the gettext
	macros that is used in Gtk+ here.

	* autogen.sh: Accept both AM_GNU_GETTEXT and AM_GNOME_GETTEXT.
	 
1998-12-15  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: All parts of GNOME will now require
	LibGTop >= 0.99.0 which is the latest version from CVS and
	already feature-freezed for GNOME 1.0.
	
1998-12-09  Martin Baulig  <martin@home-of-linux.org>

	* aclocal-include.m4 (AM_ACLOCAL_INCLUDE): Make this work
	with more than one directory.

1998-12-08  Martin Baulig  <martin@home-of-linux.org>
