@@ -1,7 +1,16 @@
+dnl
+dnl And better, use gthreads instead...
+dnl
+
 AC_DEFUN([GNOME_PTHREAD_CHECK],[
 	PTHREAD_LIB=""
 	AC_CHECK_LIB(pthread, pthread_create, PTHREAD_LIB="-lpthread",
-		[AC_CHECK_LIB(c_r, pthread_create, PTHREAD_LIB="-lc_r")])
+		[AC_CHECK_LIB(pthreads, pthread_create, PTHREAD_LIB="-lpthreads",
+		    [AC_CHECK_LIB(c_r, pthread_create, PTHREAD_LIB="-lc_r",
+			[AC_CHECK_FUNC(pthread_create)]
+		    )]
+		)]
+	)
 	AC_SUBST(PTHREAD_LIB)
 	AC_PROVIDE([GNOME_PTHREAD_CHECK])
 ])
