@@ -1,3 +1,8 @@
+Sun Jan 24 03:59:32 1999  Timur Bakeyev <mc@bat.ru>
+
+	* gnome-pthread-check.m4: Add recognition of 2 more libraries - 
+	pthreads and pthread-support build in libc (as on BSDI).
+
 1999-01-23  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-checks.m4 (GNOME_LIBGTOP_DOCU): New macro. This
